test/fixtures/eval/eval_messages.snapshot
[eval]
[eval]:1
with(this){__filename}
^^^^

SyntaxError: Strict mode code may not include a with statement
    at new Script (node:vm:*:*)
    at createScript (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [eval]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_string:*:*

Node.js *
42
42
[eval]:1
throw new Error("hello")
^

Error: hello
    at [eval]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [eval]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_string:*:*

Node.js *
[eval]:1
throw new Error("hello")
^

Error: hello
    at [eval]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [eval]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_string:*:*

Node.js *
100
[eval]:1
var x = 100; y = x;
               ^

ReferenceError: y is not defined
    at [eval]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [eval]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_string:*:*

Node.js *

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
(Use `node --trace-uncaught ...` to show where the exception was thrown)

Node.js *

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
(Use `node --trace-uncaught ...` to show where the exception was thrown)

Node.js *
done
